# jax-play

./: README.md  pyproject.toml
flax/: 2d_logreg_flax.py  cifar_fsl.ipynb  vit_classifier.ipynb  vit_classifier.py
plain_jax/: toy_logreg.ipynb
