[project]
name = "jax-play"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beartype>=0.19.0",
    "datasets>=3.2.0",
    "equinox>=0.11.11",
    "flax>=0.10.2",
    "ipykernel>=6.29.5",
    "isort>=5.13.2",
    "jax>=0.4.38",
    "jaxtyping>=0.2.36",
    "lovely-jax>=0.1.3",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "optax>=0.2.4",
    "pillow>=11.0.0",
    "scikit-learn>=1.6.0",
    "tqdm>=4.67.1",
]

[tool.ruff.lint]
ignore = ["F722"]
